# ALARMv3

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  start-ollama.sh
docs/: ARCHITECTURE.md  EXPERIMENT_MATRIX.md  METRICS.md  POC_PLAN_ALARMv3.md
examples/: alarmv3_config.yaml
launch-prompts/: billgen-kickoff.md
planning/: aaa_alarmv3_strategy_2026-04-20.md  artifact_and_orchestration_spec.md  mcp_first_architecture.md  mcp_server_spec.md  mvp_scope.md  technical_architecture.md  vision_and_requirements.md
policy/: adds.yaml
research/: alarmv1_analysis.md  alarmv2_analysis.md  comparative_analysis.md
scripts/: add_secret_chunks.py  count_chroma.py  demo_full_run.py  generate_full_wiki.py  measure_cli_query.sh  migrate_paths_to_relative.py  rag_query.py  rechunk_session.py  rerun_deep_analysis.py  run_index_and_log.sh  setup_env.sh
src/alarmv3/: __init__.py  cli.py  config.py  core.py
src/alarmv3/adapters/sync/: base.py  localfs.py
src/alarmv3/cli/: main.py
src/alarmv3/core/: analysis.py  artifacts.py  autopilot.py  codebase_policy.py  crossrepo.py  deep_analysis.py  discovery.py  evaluation.py  guardrails.py  implementation.py  index.py  knowledge.py  language_researcher.py  memory.py  orchestration.py  session.py  synthesis.py
src/alarmv3/mcp/: prompts.py  resources.py  server.py  tools.py
tests/fixtures/sample_repo/: Module1.vb  main.cpp  utils.cpp  utils.h
tests/integration/: test_adversarial_pipeline.py  test_implementation_pipeline.py  test_live_synthesis.py  test_mcp_smoke.py  test_pipeline.py  test_rag_pipeline.py
tests/unit/: test_analysis.py  test_artifacts.py  test_autopilot.py  test_cli.py  test_codebase_policy.py  test_discovery.py  test_evaluation.py  test_guardrails.py  test_implementation.py  test_knowledge.py  test_mcp_tools_phase3.py  test_policy_overlays.py  test_rag_query_policy.py  test_session.py  test_synthesis.py
wiki/: SCHEMA.md  index.md  log.md
wiki/architecture/: board-decisions.md  three-layer-boundary.md
wiki/concepts/: llm-wiki.md  mcp-first.md  multi-agent-architecture.md
wiki/personas/: cole-medin.md  mitko-vasilev.md
wiki/project/: aaa-alarmv3-strategy.md  adds-modernization-plan.md  alarm-lineage.md  alarmv3-overview.md  phase1-implementation.md  phase2-plan.md  phase3-plan.md  phase4-plan.md
wiki/runbooks/: billgen-live-demo.md  full-archive-run.md
wiki/tools/: ollama-codespaces.md
