[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alarmv3"
version = "0.1.0"
description = "Intelligent, actionable legacy code modernization assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # Core
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # LLM + MCP
    "anthropic>=0.40",
    "mcp[cli]>=1.0",
    # Parsing — C++ and VB are Phase 1 priority targets
    # tree-sitter-vbnet is not on PyPI; VB falls back to regex extraction
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    # tree-sitter-c-sharp is published as tree-sitter-c-sharp on PyPI
    "tree-sitter-c-sharp>=0.23.0",
    # Embeddings — local via Ollama (nomic-embed-text)
    "ollama>=0.3.0",
    # Vector storage — Phase 2; installed now so Phase 2 is just code, not deps
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
alarmv3     = "alarmv3.cli.main:cli"
alarmv3-mcp = "alarmv3.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alarmv3"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
